tests/rosetta/out/Fortran/boolean-values.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program boolean_values
  implicit none
    integer :: l
    integer :: n
    integer :: x
    integer :: y
    character(len=100) :: str1
    integer :: bolStr
  main()
  contains
  recursive logical function parseBool(s) result(res)
    character(len=100), intent(in) :: s
    l = lower(s)
    if ((((((((((l == '1') .or. l) == 't') .or. l) == .true.) .or. l) == 'yes') .or. l) == 'y')) then
      res = .true.
      return
    end if
    res = .false.
    return
  end function parseBool
  recursive integer function main() result(res)
    n = .true.
    print *, n
    print *, 'bool'
    n = .not. n
    print *, n
    x = 5
    y = 8
    print *, 'x == y:', (x == y)
    print *, 'x < y:', (x < y)
    print *, '
Convert String into Boolean Data type
'
    str1 = 'japan'
    print *, 'Before :', 'string'
    bolStr = parseBool(str1)
    print *, 'After :', 'bool'
  end function main
end program boolean_values
